src/test/deca/syntax/valid/sansObjet/41_ifElseIf.deca
/* Description:
   Test du programme sur l'utilisation de
    if else if



   Historique:
     cree le 13/01/2020
*/


{
      if (x) {} else if (y) {}
}
