src/test/deca/syntax/invalid/class/mal_utilisation_instancof.deca
/*
	Description: instance of sans declaration de l'objet
	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



{
	

	 if(instanceof type)
	{
	}

}
